# rss

./: .gitignore  README.md  pyproject.toml  sources.yaml
daily/2026/04/: 14.md  15.md  16.md  17.md  20.md  23.md
daily/2026/04/15/: 10.md
daily/2026/04/16/: 14.md
daily/2026/04/17/: 10.md
daily/2026/04/20/: 14.md
daily/2026/04/23/: 18.md
docs/: kol-list.md
docs/backlog/: 2026-04-13-news-aggregator.md  2026-04-14-cross-slot-dedup.md  2026-04-14-schedule-layering.md  2026-04-20-finance-sources-expansion.md  2026-04-23-exa-topic-fetcher.md  2026-04-23-web-fetcher-routing.md  INDEX.md
docs/decisions/: 2026-04-13-news-aggregator.md  2026-04-23-cross-day-dedup.md
docs/plans/: 2026-04-13-news-aggregator-plan.md  2026-04-15-schedule-layering-plan.md
docs/research/: 2026-04-13-im-channels-ai-bot.md
docs/runbooks/: x-account-setup.md
docs/specs/: 2026-04-13-news-aggregator-design.md  2026-04-15-schedule-layering-design.md  2026-04-20-finance-sources-integration.md  2026-04-23-external-source-routing-design.md
docs/tests/: cross-day-dedup.md  news-aggregator-e2e.md  schedule-layering.md  web-fetcher.md
launchd/: com.renlongyu.rss.plist
prompts/: classify.md
scripts/: install_launchd.sh
src/: config.py  dedup.py  main.py  publish.py  rank.py  render.py
src/fetch/: base.py  github_fetcher.py  hn_fetcher.py  reddit_fetcher.py  rss_fetcher.py  web_fetcher.py  x_fetcher.py
src/templates/: daily.md.j2  slot.md.j2  x_slice.md.j2
tests/: test_dedup.py  test_publish.py  test_rank.py  test_render.py  test_x_fetcher.py
